<resources>
    <string name="app_name">Easer</string>
    <string name="param_modifuser">modifier nom d\'utilisateur</string>
    <string name="param_notification">activation des notifications</string>
    <string name="param_cachersaufkiff">cacher ma position à tous sauf à mes kiffs</string>
    <string name="param_cacheramis">cacher ma position à mes amis</string>
    <string name="param_cachertous">cacher ma position à tous</string>
    <string name="param_inclurefb">ne pas inclure mes amis fb dans les profils proposés</string>
    <string name="param_suppcompte">supprimer mon compte</string>
    <string name="contact_popupnomesssage">Vous êtes bloqué, vous pourrez continuer si elle autorise de nouveau la conversation</string>
    <string name="prompt_email">Téléphone</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">valider</string>
    <string name="enregistrer">s\'enregistrer</string>
    <string name="deconnect">déconnexion</string>
    <string name="contact_nomesssage">Vous ne pouvez plus envoyer de messages</string>
    <string name="homo">homo</string>
    <string name="bi">bi</string>
    <string name="hetero">hetero</string>
    <string name="jesuisplutot">Je suis plutôt</string>
    <string name="selectionne">Selectionne ce qui t\'intéresse</string>
    <string name="oublie">oublié ?</string>
    <string name="param_langue">langue</string>
    <string name="param_verifprofil">faire verifier mon profil</string>
    <string name="contact_localiser">Localiser</string>
    <string name="contact_luine">Lui ne pourra vous localiser que si vous l\'autorisez</string>
    <string name="contact_nbmessage">Vous pouvez envoyer </string>
    <string name="contact_lelocaliser">Vous pouvez le localiser </string>
    <string name="contact_message">messages</string>
    <string name="header_contact">contacts</string>
    <string name="main_tel">Avec un n° de téléphone</string>
    <string name="main_fb">avec Facebook</string>
    <string name="typesoiree">Type soirée</string>
    <string name="liensite">Lien du site</string>
    <string name="horaireouverture">Horaire d’ouverture</string>
    <string name="recherchefille">Recherche de filles proches...</string>
    <string name="recherchehomme"> Recherche d\'hommes proches...</string>
    <string name="recherchehommefille"> Recherche d\'hommes et de femmes proches...</string>
    <string name="prenom">Prénom</string>
    <string name="encliquant">En cliquant sur valider vous acceptez les conditions générales d\'utilisation et la politique de confidentialité</string>
    <string name="coderecu">Saisir le code reçu par sms</string>
    <string name="sendcode">Renvoyer le code</string>
    <string name="libsms">Votre mot de passe vous sera envoyé par sms</string>
    <string name="plutot">plutôt</string>
    <string name="fetard">fétard</string>
    <string name="calme">calme</string>
    <string name="amis">amis</string>
    <string name="amour">amour</string>
    <string name="photo">photos</string>
    <string name="pres">présentation</string>
    <string name="jesuis">je suis …</string>
    <string name="ajoutamis">Ajouter un nouvel ami</string>
    <string name="ajoutrep">à partir du téléphone</string>
    <string name="ajouttel">n° de téléphone</string>
    <string name="montel">mon téléphone</string>
    <string name="rep">mon répertoire</string>
    <string name="apartir">à partir de</string>
    <string name="newconv">Nouvelle conversation</string>
    <string name="nomconv">Nom de la conversation</string>
    <string name="nom">Nom</string>
    <string name="ajoutami">ajouter des amis</string>
    <string name="annuler">Annuler</string>
    <string name="tapmes">Taper un message</string>
    <string name="send">Envoyer</string>
    <string name="refuser">Refuser</string>
    <string name="accept">Accepter</string>
    <string name="ajout">Ajouter</string>
    <string name="kiffs">Mes kiffs</string>
    <string name="mesamis">Mes amis</string>
    <string name="inconnus">Mes inconnus</string>
    <string name="restemes">Vous pouvez envoyer 6 messages</string>
    <string name="jevoudrais">Je voudrais le rencontrer</string>
    <string name="jeveuxpas">je ne veux pas</string>
    <string name="map">Map</string>
    <string name="appuielong">Appuie longtemps sur soirée</string>
    <string name="attentionkiff">Attention, ne kiffes pas trop, la jauge va te bloquer</string>
    <string name="continueclic">Pour continuer, cliquez ici</string>
    <string name="soiree">Soirée</string>
    <string name="fetes">Fêtes</string>
    <string name="date">Date</string>
    <string name="horaire">Horaire</string>
    <string name="concert">Concert</string>
    <string name="bar">Bar</string>
    <string name="barnuit">Bar de nuit</string>
    <string name="boitenuit">Boite de nuit</string>
    <string name="debit">Débit d\'alcool</string>
    <string name="autre">autres</string>
    <string name="newuser">nouveau nom utilisateur</string>
    <string name="kiffes">kiffé(e)s</string>
    <string name="fois">fois</string>
    <string name="à">à</string>
    <string name="metres">mètres</string>
    <string name="nouveau">Nouveau</string>
    <string name="kiff">kiff</string>
    <string name="fetessoiree">Fêtes et soirées</string>
    <string name="ilvousreste">Il vous reste un seul kiffe, beurkez plus</string>
    <string name="annulfb">Vous avez annulé l\'authentification par facebook</string>
    <string name="erreurfb">Erreur lors de l\'authentification facebook</string>
    <string name="tendance">Merci de renseigner votre tendance sexuelle</string>
    <string name="telobligatoire">Le téléphone est obligatoire.</string>
    <string name="logincorrect">Login ou mot de passe incorrect</string>
    <string name="conditionbouton">En cliquant sur valider vous acceptez les &lt;u>conditions générales d\'utilisation&lt;/u> et la &lt;u>politique de confidentialité&lt;/u>.</string>
    <string name="parametre">Paramètres</string>
    <string name="valider">valider</string>
    <string name="action_connexion">connexion</string>
    <string name="action_sign_in_short">valider</string>
    <string name="coloreaser">#2c2954</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Mot de passe requis</string>
    <string name="error_incorrect_password">Votre mot de passe est incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="renvoiecode"><u>Renvoyer le code</u></string>
    <string name="facebook_app_id">1330559460347061</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_newuser">Nouvel Utilisateur</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_profil">Cacher mon profil</string>
    <string name="pref_title_gps">Cacher ma position à mes amis</string>
    <string name="pref_title_notification">Activation des notifications</string>
    <string name="pref_title_gps_tous">Cacher ma position à tous</string>
    <string name="pref_title_facebook_amis">Ne plus me proposer mes amis fb dans profils proches</string>
    <string name="pref_description_social_recommendations">Recommandé pour être trouver sur la carte par les profils
    </string>
</resources>