<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.kenfestoche.smartcoder.kenfestoche.NewProfil"
    android:orientation="vertical">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#2c2954"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/headereaser"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/createuser_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/createuser_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dip"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2c2954"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="text"
                android:textColor="#2c2954"
                android:textColorHint="#2c2954"
                android:textSize="11.33pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2c2954"
                android:digits="1234567890"
                android:ems="10"
                android:hint="@string/ajouttel"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="#2c2954"
                android:textColorHint="#2c2954"
                android:textSize="11.33pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2c2954"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="#2c2954"
                android:textColorHint="#2c2954"
                android:textSize="11.33pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2c2954"
                android:digits="1234567890"
                android:ems="10"
                android:hint="âge"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="#2c2954"
                android:textColorHint="#2c2954"
                android:textSize="11.33pt" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/viewMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.21"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/radioMale"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:background="#d2d2db" />

                <ImageView
                    android:id="@+id/imrdMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/homme"
                    android:text="homo"
                    android:textColor="#3a375f" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewFemale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/radioFemale"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:background="#d2d2db" />

                <ImageView
                    android:id="@+id/imrdFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:src="@drawable/femme"
                    android:textColor="#3a375f" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/viewnewHomo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imnewHomo"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:background="#d2d2db" />

                <TextView
                    android:id="@+id/txnewHomo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/homo"
                    android:textColor="#3a375f"
                    android:textSize="15dipp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewnewHete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imnewhete"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:background="#d2d2db" />

                <TextView
                    android:id="@+id/txnewhetero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/hetero"
                    android:textColor="#3a375f"
                    android:textSize="15dip" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/viewnewBi"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imnewBi"
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:background="#d2d2db" />

                <TextView
                    android:id="@+id/txnewBi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:text="@string/bi"
                    android:textColor="#3a375f"
                    android:textSize="15dip" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dip">

            <Button
                android:id="@+id/btValidCompte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="#2c2954"
                android:text="@string/action_sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/text_color"
                android:textSize="18dip" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dip"
                android:linksClickable="false"
                android:longClickable="false"
                android:text="@string/encliquant"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#2c2954"
                android:textSize="5pt" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
